# syndat

./:  requirements.txt   .readthedocs.yaml  CITATION.cff  README.md  india.py  makefile  noxfile.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: python-publish.yaml  test-docs.yaml  tests.yaml
docs/: api.rst  conf.py  index.rst  quickstart.rst  requirements.txt  usage.rst
docs/api/: index.rst  syndat.metrics.rst  syndat.postprocessing.rst  syndat.rct.metrics_rct.rst  syndat.rct.preprocessing_tidy_format.rst  syndat.rct.rst  syndat.rct.visualization_clical_trials.rst  syndat.rct.visualization_clinical_trials.rst  syndat.scores.rst  syndat.visualization.rst
docs/source/: conf.py
examples/: basic.py  rct_example.py
src/syndat/: __init__.py  domain.py  visualization.py
syndat/: __init__.py  _utils.py  core.py  domain.py  helper_dataloading_functions.py  helper_plot_functions.py  metrics.py  postprocessing.py  preprocessing_tidy_format.py  quality.py  scores.py  test.py  visualization.py  visualization_clical_trials.py
syndat/rct/: metrics_rct.py  preprocessing_tidy_format.py  visualization_clical_trials.py  visualization_clinical_trials.py
tests/: .readthedocs.yaml  smoke_test.py  test_auc.py  test_correlation.py  test_documentation.py  test_evaluator.py  test_jsd.py  test_postprocessing.py  test_tidy_format.py  test_visualization.py  test_visualizations.py  test_visualizations_rct.py
tests/resources/: real.csv  synthetic.csv
