[project]
name = "syndat"
version = "0.0.3"
description = "A library for evaluation & visualization of synthetic data."
authors = [{ name = "Tim Adams", email = "tim.adams@scai.fraunhofer.de" }]
requires-python = ">=3.9,<3.14"
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "synthetic-data",
    "data-quality",
    "data-visualization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.0",
    "shap>=0.48",
    "plotnine>=0.13.6",
    "numpy>=1.26.2",
    "scipy>=1.11.4",
]

[project.urls]
Homepage = "https://github.com/SCAI-BIO/syndat"
Repository = "https://github.com/SCAI-BIO/syndat"
documentation = "https://github.com/SCAI-BIO/syndat#readme"
source = "https://github.com/SCAI-BIO/syndat"
tracker = "https://github.com/SCAI-BIO/syndat/issues"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.2.1",
    "flake8>=7.3.0",
    "nox>=2026.2.9",
]
docs = [
    "sphinx>=7.0,<9.0",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
